[package]
name = "rust_async_event_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_async_event_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module","chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
chrono = "0.4.42"
log = "0.4.28"
parking_lot = "0.12.5"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1